# poker-hand-review

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  pages.yml
data/: README.md  sample.txt
docs/: SOLVER_ADAPTER.md  index.html  landing.css  landing.js
docs/i18n/: README.zh-CN.md  README.zh-TW.md
docs/screenshots/: README.md
gto-preflop/charts/: index.json
gto-preflop/charts/100bb/rfi/: BTN.json  CO.json  HJ.json  LJ.json  SB.json  UTG.json  UTG1.json
gto-preflop/charts/100bb/vs-open/: BB-vs-SBlimp.json  BTN-vs-BB.json  BTN-vs-SB.json  BTNopen-vs-blind3bet.json  EP-vs-BB.json  EP-vs-BTN.json  EP-vs-MP.json  EP-vs-SB.json  EPopen-vs-IP3bet.json  EPopen-vs-blind3bet.json  MP-vs-BB.json  MP-vs-BTN.json  (+7 more)
src/n8_review/: __init__.py  config.py  web_server.py
src/n8_review/analysis/: leaks.py  stats.py
src/n8_review/enrich/: __init__.py  hero_context.py
src/n8_review/evaluate/: quality.py
src/n8_review/gto/: preflop_charts.py  ranges.py
src/n8_review/models/: action.py
src/n8_review/parser/: __init__.py  hand_parser.py
src/n8_review/profile/: opponent.py
src/n8_review/report/: __init__.py  cli_report.py
src/poker_hand_review/: __init__.py  cli.py  config.py  web_server.py
src/poker_hand_review/analysis/: __init__.py  equity.py  leaks.py
src/poker_hand_review/evaluate/: __init__.py  evaluator.py
src/poker_hand_review/gto/: __init__.py  preflop_charts.py  ranges.py
src/poker_hand_review/models/: __init__.py  cards.py  enums.py  hand.py  quality.py  tournament.py
src/poker_hand_review/parser/: hand_parser.py  patterns.py  tokenizer.py
src/poker_hand_review/profile/: __init__.py  opponent.py
src/poker_hand_review/report/: json_export.py
tests/: test_equity.py  test_hand_parser.py  test_postflop_evaluation.py  test_sdd_pipeline.py  test_texassolver_adapter.py  test_web_server.py
tools/: extract_preflop_charts.py  import_mtt_preflop_charts.py  import_texassolver_preflop_charts.py  texassolver_adapter.py
validation/: node.json  report_solver.json  texassolver.cmd
web/: README.md  app.js  app.test.mjs  index.html  styles.css
(+609 files in other folders)
